Add reset button

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       </div>
     </label>
     <button id="solvebtn">Solve</button>
+    <button id="resetbtn" onclick="resetPage()">Reset Page</button>
   </div>
 
 
